# dwm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  PKGBUILD  autostart.sh  config.def.h  config.def.h.orig  config.h  config.h.orig  drw.c  drw.h  dwm.c  dwm.c.orig  dwm.c.rej  dwm.h  fibonacci.c  flake.nix  layouts.c  result  util.h
.cache/clangd/index/: catppuccin.h.818E96D0BE1A48A5.idx  config.h.370A09C4F324A7AA.idx  drw.c.BCCFA9150A796612.idx  drw.h.A8041C6B701080C1.idx  dwm.c.BA91731E88A32184.idx  dwm.h.2092016EC4B6A368.idx  util.c.9F97A2824500249E.idx  util.h.2E4CD3D48595D621.idx
script/: background.py  dwm_status.zsh  picom.sh
scripts/: bar.sh  caps_lock.sh  light.sh  mem.sh  show.sh  time.sh  traffic.sh  volume.sh
themes/: catppuccin.h
